apps/adguard/adguard-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
  namespace: adguard
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "adguard.mgmt.sholdee.net"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-https
  namespace: adguard
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "adguard.mgmt.sholdee.net"
  rules:
  - backendRefs:
    - name: adguard-http
      namespace: adguard
      port: http
